public/css/main.css
h1, h2, h3, h4, h5, p, ul, a, input, label, button, select, body, section{
	font-family: 'Helvetica Neue', sans-serif;
}
/*font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;
 color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 275px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center;*/
#app{
	border-top: 5px solid #00a79d;
}
#appname{
	margin-right: 50px;
	border: initial !important;
}
#appname:hover{
	color: #00a79d !important;
}
html{
	overflow-x: hidden;
}
body {
  margin: 0px;
  padding: 0px;
}
select{
	text-align-last: center;
}
.form-control{
	border: 1px solid #777;
}
.stickysecond form{
	margin: 10px;
}
.loginattempt{
	text-align: center;
 	z-index: 2;
	position: absolute;
	width: 100%;
}
.loginattempt h3{
	font-size: 15px;
	font-weight: bold;
}
.pref-search::-webkit-input-placeholder {
    font-weight: bold;
}
#proptype, #numbaths, #numbeds, #ssbox, #housetype{
	font-weight: bold;
}
.element::-moz-placeholder {
    font-weight: bold;
}
.element:-ms-input-placeholder {
    font-weight: bold;
}
.element:-o-input-placeholder {
    font-weight: bold;
}
#advsearchbody .form-control{
	width: 100% !important;
}
.col-border:after{
	content: "";
	position: absolute;
	top: 0;
	bottom: 0;
	border-left: 1px solid #eeeeee;
}
.col-border{
	padding: 1px;
	position: static;
}
.row-relative {
	padding-left: 10px;
	position: relative;
	border-bottom: 1px solid #eeeeee;
	/*border-top: 1px solid #eeeeee;*/
}
.col-border-padding {

}
#appname{
	margin-top: -8px;
	color: #00a79d;
}
/* jquery 3 hack fix */
.bootstrap-datetimepicker-widget {
  display: block;
}
#checkboxform label{
	display: block;
}
/* combobox */

.selectBoxArrow{
	margin-top:1px;
	float:left;
	position:absolute;
	right:1px;
}
.selectBoxInput{
	border:0px;
	padding-left:1px;
	height:16px;
	position:absolute;
  border: 1px solid #777;
	top:0px;
	left:0px;
}
.selectBox{
	height:20px;
}
.selectBoxOptionContainer{
	position:absolute;
	border:1px solid #7f9db9;
	height:100px;
	background-color:#FFF;
	top:20px;
	visibility:hidden;
	overflow:auto;
	overflow-x: hidden;
}
.selectBoxAnOption{
	font-family:arial;
	font-size:12px;
	cursor:default;
	margin:1px;
	overflow:hidden;
	white-space:nowrap;
}
.selectBoxIframe{
	position:absolute;
	background-color:#FFF;
	border:0px;
	z-index:999;
}
/* IMG */
img[src=""] {
    display: none;
}
.fotorama__loaded .fotorama__img{
	left: 0 !important;
}
/* CONTAINERS */
.reviewform{
	width: 500px;
	margin-right: -20px;
	margin: 0 auto;
	background-color: #e5e5e5;
	border: 1px solid #e6e6e6;
}
/**/
/* PANELS */
.panel-title{
	color: #777;
	background-color: #e5e5e5;
	padding: 12px;
}
.proptitle{
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
/* */
/* IMG END */

/* FOOTER */
.footer-bottom .foot-social p a{
	font-size: 30px;

}
.footer {
   /*background-color: #33a0aa;*/
	 background-color: #f5f8fa;
   line-height: 20px;
	 /*color: black;*/
	 padding: 80px 0 50px;
 	 margin-bottom: -30px;
}
.footer-section{
	width: 100%;
}
.footer-col a{
	padding-left: 5px;
}
.footer-bottom .navi ul {
    text-align: center;
    line-height: normal;
}
.footer li {
    margin-bottom: 6px;
    line-height: 25px;
    /*color: #fff;*/
}
.navi >ul >li {
    position: relative;
    display: inline-block;
    float: left;
    list-style: none;
    overflow: hidden;
}
.footer a, .footer-bottom .navi a, .footer-bottom .foot-social p a {
    /*color: #FFFFFF;*/
}
.footer-bottom .navi li {
		padding-right: 20px;
    margin: 0;
    font-weight: 400;
    text-transform: inherit;
    text-align: center;
}
.navi ul {
  line-height: inherit;
  margin: 0;
  font-weight: 400;
  text-transform: inherit;
  text-align: inherit;
}
.footer-bottom{
	/*background-color: #33a0aa;*/
	/*border-top: 1px solid #33a0aa;*/
	width: 100%;
	line-height: 20px;
	padding: 30px 0;
	/*color: white;*/
}
/* FOOTER END */

/* NAV BAR */
.navbar{
  margin-bottom: inherit;
  border: none;
	background-color: #fff;
}
.nav>li>a{
	color: #9d9d9d;
	margin-right: 30px;
	font-weight: 500;
}

.navbar-inverse{
  background-color: #f9fbfc;
}

/*.navbar-default .navbar-nav>li>a, .navbar-default .navbar-text{

}
.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover{
	background-color: #33a0aa;
}*/

/*.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover{
  color: black;
}*/
/* NAV BAR END */


/* modal */
body.modal-open{
	padding-right: 0 !important;
}
.modal-open .modal{
	overflow-y: hidden !important;
	padding-right: 0 !important;
}
.modal-backdrop{
  z-index: 900;
}

/* MODAL END */

/* Btns */
.btn-primary{
	background-color: #00a79d;
	border-color: #00a79d;
}
.btn-group-lg>.btn, .btn-lg{
  margin-right: 0.01em;
  font-weight: 500;
	line-height: inherit;
	border-radius: inherit;
}
#profile-save{
	line-height: 1.3333333;
  border-radius: 6px;
}

#reg-btn{
	background-color: #00a79d;
	border-color: #00a79d;
}

#reg-btn:hover{
	background-color: #00c1b6;
	border-color: #00c1b6;
}

#login-btn{
	background-color: #777;
	color: white;
	border-color: #00a79d;
}
#login-btn:hover{
	background-color: #00c1b6;
	border-color: #00c1b6;
	color: white;
}



/* BTNS END */
/* Pages */
.sticky {
  position: fixed;
  top: 0;
	/*opacity: 0;*/
  width: 100%;
}
/* End Pages */
/* property */
#property-listings{
	height: 835px;
}
/* PROPERTY END */

/* splash section */
.splash-title{
	color: white;
	position: relative;
	top: 200px;
	display: block;
	width: 800px;
	max-width: 100%;
}
#listings-row{
	margin-right: -28px;
}
#listings-row .filter-panel{
	width: 850px;
	margin: auto;
}
.filter-panel{
	text-align: center;
}
#filter-panel-home{
	position: relative;
	top: 30%;
}
#home-container div {
    margin: 0 auto;
}
#home-container{
	height: 700px;
}
.splash-section .splash-inner-content{
	position: relative;
	z-index: 3;
}
/* ... */

